--- a/.gitignore
+++ b/.gitignore
@@ -261,3 +261,16 @@ __pycache__/
 *.pyc
 rh-/rh-/content/Shaders/SkinnedModel.cso
 rh-/rh-/content/Shaders/SkinnedModel.cso
+rh-/temp/tinyxml2/x64-Debug-Dll/tinyxml2.tlog/CL.command.1.tlog
+rh-/temp/tinyxml2/x64-Debug-Dll/tinyxml2.tlog/CL.command.1.tlog
+rh-/temp/tinyxml2/x64-Debug-Dll/tinyxml2.tlog/CL.command.1.tlog
+rh-/temp/tinyxml2/x64-Debug-Dll/tinyxml2.tlog/CL.read.1.tlog
+rh-/temp/tinyxml2/x64-Debug-Dll/tinyxml2.tlog/CL.write.1.tlog
+rh-/temp/tinyxml2/x64-Debug-Dll/tinyxml2.tlog/link.read.1.tlog
+rh-/temp/tinyxml2/x64-Debug-Dll/tinyxml2.tlog/link.write.1.tlog
+rh-/temp/tinyxml2/x64-Debug-Dll/tinyxml2.tlog/tinyxml2.lastbuildstate
+rh-/temp/tinyxml2/x64-Debug-Dll/tinyxml2.tlog/tinyxml2.write.1u.tlog
+rh-/temp/tinyxml2/x64-Debug-Dll/vc141.idb
+rh-/temp/tinyxml2/x64-Debug-Dll/tinyxml2.tlog/CL.command.1.tlog
+*.tlog
+rh-/temp/tinyxml2/x64-Debug-Dll/vc141.idb
