--- a/rh-/rh-/rh-.vcxproj.filters
+++ b/rh-/rh-/rh-.vcxproj.filters
@@ -223,8 +223,12 @@
     <ClInclude Include="UI.h">
       <Filter>Inc</Filter>
     </ClInclude>
-    <ClInclude Include="PlayerSystem.h" />
-    <ClInclude Include="PlayerComponent.h" />
+    <ClInclude Include="PlayerComponent.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerSystem.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DeviceResources.cpp">
@@ -404,8 +408,12 @@
     <ClCompile Include="UI.cpp">
       <Filter>Src</Filter>
     </ClCompile>
-    <ClCompile Include="PlayerSystem.cpp" />
-    <ClCompile Include="PlayerComponent.cpp" />
+    <ClCompile Include="PlayerComponent.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerSystem.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="resource.rc" />
